2005-01-06  Jorn Baayen  <jbaayen@gnome.org>

	* src/Muine.cs:
	* src/PlaylistWindow.cs:

	Return 1 on error.

2005-01-06  Jorn Baayen  <jbaayen@gnome.org>

	* DBusLib/Makefile.am:
	* PluginLib/Makefile.am:
	* configure.in:
	* plugins/Makefile.am:
	* src/Makefile.am:

	Move -codepage:utf8 flag to configure.in.

2005-01-06  Jorn Baayen  <jbaayen@gnome.org>

	* src/Makefile.am:

	Split off MUINE_GENERATED_CSFILES from MUINE_CSFILES.

2005-01-06  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* data/Makefile.am:
	* data/org.gnome.Muine.service.in:

	Install D-Bus service file.

2005-01-06  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/Makefile.am:
	* src/muine.exe.config.in:
	* src/muine.in:

	Use @pkglibdir@ in src/*.in.

2005-01-06  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/Makefile.am:
	R libmuine/gettext-utils.c:
	R libmuine/gettext-utils.h:
	* src/About.cs:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/Album.cs:
	* src/Defines.cs.in:
	* src/ErrorDialog.cs:
	R src/GettextCatalog.cs:
	* src/Makefile.am:
	* src/Metadata.cs:
	* src/Muine.cs:
	* src/MuineDBusService.cs:
	* src/NotificationAreaIcon.cs:
	* src/Player.cs:
	* src/PlaylistWindow.cs:
	* src/PluginManager.cs:
	* src/ProgressWindow.cs:
	* src/StringUtils.cs:
	* src/muine.in:

	Ditch our local copy of GettextCatalog now that we have
	Mono.Posix.Catalog.

2005-01-06  Jorn Baayen  <jbaayen@gnome.org>

	* data/images/muine-volume-max.png:
	* data/images/muine-volume-medium.png:
	* data/images/muine-volume-min.png:
	* data/images/muine-volume-zero.png:

	Use jimmac's volume icons.

2005-01-06  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/player-gst.c: (player_set_file), (player_stop):

	Fix #162244.

2005-01-05  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/About.cs:

	0.8.0pre3.
	
	* doc/en/MuinePluginLib/IPlayer.xml:

	Small clean up in the UIManager example.

2005-01-05  Jorn Baayen  <jbaayen@gnome.org>

	* data/Makefile.am:
	* doc/Makefile.am:

	Build cleanups.
	